--- a/rates.html
+++ b/rates.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>Index File</title>
+<title>Rates File</title>
 <link rel="stylesheet" href="css/main.css" />
+<link href='http://fonts.googleapis.com/css?family=Share' rel='stylesheet' type='text/css'>
+
 
 </head>
 <body>
-<div id="wrapper">	
+<div id="wrapper">
+
 <header>
 	<nav>
 		<ul>
@@ -20,8 +23,9 @@
 		</ul>
 	</nav>
 	
-	<h1>Logo Here</h1>
-
+	<div id="logo_container">
+	<a id="logo" href="index.html"><img src="images/logo.png" /></a>
+	</div>
 </header>
 <div id="content">
 <h1>This is the body...</h1>
@@ -30,8 +34,9 @@
 	<p>separator line</p>
 </div>
 </div><!--end content -->
-<footer>
-</footer>
 </div><!-- end wrapper -->
+<footer>
+<div id="footer_container"><p>footer</p></div>	
+</footer>
 </body>
 </html>
