--- a/reservations.html
+++ b/reservations.html
@@ -36,7 +36,18 @@
 </div><!--end content -->
 </div><!-- end wrapper -->
 <footer>
-<div id="footer_container"><p>footer</p></div>	
+<div id="footer_container">
+	<ul id="footer_nav">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="services.html">Services</a></li>
+			<li><a href="rates.html">Rates</a></li>
+			<li><a href="vehicles.html">Vehicles</a></li>
+			<li><a href="destinations.html">Destinations</a></li>
+			<li><a href="reservations.html">Reservations</a></li>
+		</ul>
+<p id="copyright">&copy;2012 Orlando Tropical Transport</p>
+		
+</div>	
 </footer>
 </body>
 </html>
