updates- home complete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<nav>
 					<ul>
 						<li>
-							<a href="index.html">Home</a>
+							<a class="current_page" href="index.html">Home</a>
 						</li>
 						<li>
 							<a href="services.html">Services</a>
@@ -40,11 +40,10 @@
 				</div>
 			</header>
 			<div id="marquee_header">
-				<h1>Test Heading Big Words</h1>
-				<h2>Slightly smaller big words</h2>
-				<p>
-					This will be some text that says a lot more about something
-				</p>
+				<h1>Business or Pleasure</h1>
+				<h2>Orlando Tropical Transport<br />Can Get You There</h2>
+				<p>Catching a plane and need to get to the airport? Picking up an important client that you need to impress? Need a ride for a night out on the town? No matter what the occasion, <span id="company_name">Orlando Tropical Transport</span> has a ride for you!</p>
+				<p>See our <a href="destinations.html">Destinations</a> page to view some of Central Florida's popular attractions!</p>
 			</div>
 			<div id="container">
 				<div id="marquee_container autoplay">
@@ -59,24 +58,23 @@
 						<div class="marquee_nav"></div><!-- end marquee_nav -->
 						<div class="marquee_panels">
 							<div class="marquee_panel">
-								<img src="images/photos/city_by_water.jpg" class="marquee_panel_photo" alt="image 1" />
+								<img src="images/photos/taxi.jpg" class="marquee_panel_photo" alt="taxi" />
 								<div class="marquee_panel_caption">
-									<h2>City</h2>
+									<h2>Taxi Service</h2>
 									<p>
-										This is a test caption for a city by the water.
-										<br />
-										This is a test caption on line two for city by the water.
+										We offer taxi services for the Orlando area 24 hours a day, 7 days a week!
+										<a href="reservations.html">Contact</a> our dispatch office at <span class="contact_number">407-855-4600</span>.
 									</p>
 								</div><!--end marquee_panel_caption -->
 							</div><!-- end marquee_panel -->
 							<div class="marquee_panel">
-								<img src="images/photos/airline.jpg" class="marquee_panel_photo" alt="image 2" />
+								<img src="images/photos/business_man_in_car.jpg" class="marquee_panel_photo" alt="business man in car" />
 								<div class="marquee_panel_caption">
-									<h2>Airport Shuttle Service</h2>
+									<h2>Luxury Sedans</h2>
 									<p>
-										Airport Shuttle Service.
+										Our Lincoln and Cadillac Sedans are made for traveling in comfort and style.
 										<br />
-										This is a test caption on line two for Image 2.
+										<a href="vehicles.html">See our vehicles</a>
 									</p>
 								</div><!--end marquee_panel_caption -->
 							</div><!-- end marquee_panel -->
@@ -95,11 +93,53 @@
 						<!-- end marquee_panels -->
 					</div>
 					<!--end marquee container -->
+					<br class="clearfix" />
+					<div class="content_seperator">
+						<p>content seperator</p>
+					</div>
+					<br class="clearfix" />
+					<section>
+						<div class="service_subsection">
+						<div class="sub_section_img_container"><img src="images/photos/bridelimo.jpg"></div>
+						<h3>The Bride's Ride</h3>
+						<p>We understand how hectic planning a wedding can be. With all the guests to invite, facilities to reserve and dress shopping to do, who wants to worry about a ride? Book our worry-free <strong>Chauffeured Limousine</strong> service and arrive for your big day in luxurious style!</p>
+						</div>
+						<div class="service_subsection">
+							<div class="sub_section_img_container"><img src="images/photos/partybus.jpg"></div>
+						<h3>Party On Wheels</h3>
+						<p>Did someone say <strong>"Party Bus"</strong>? A Party Bus is the most fun you can have on wheels. Built for entertainment and comfort, our busses are packed with large flatscreen TVs, sound-systems, and all the amenities you could want for your party-in-motion.</p>							
+						</div>
+						<aside id="special_offers">
+							<h3>Special Offers</h3>
+							<p>Local residential and business customers may be eligible to receive a <strong>discount of &#36;5 or more</strong> for using our services.<br /> Large groups may be eligible for a discounted flat rate.</p>
+							<a href="rates.html">See Offers</a>
+						</aside>
+					</section>
+					<br class="clearfix"/>
+					<section id="service_descriptions">
+						<div class="service_subsection_secondary">
+							<h3>Punctual</h3>
+							<p>Most travel time is under 30 minutes in duration.</p>
+						</div>
+						<div class="service_subsection_secondary divider">
+							<h3>Professional</h3>
+							<p>Our chauffeurs and service representatives are courteous and ready to help.</p>
+						</div>
+						<div class="service_subsection_secondary divider">
+							<h3>Luxurious</h3>
+							<p>All of our vehicles are nicely equipped, clean and include radios and GPS tracking.</p>
+						</div>
+						<div class="service_subsection_secondary divider">
+							<h3>Need a Quote?</h3>
+							<p>Call our friendly customer service staff at <strong>407-855-4600</strong>!</p>
+						</div>
+					</section>
 				</div><!--end container -->
 			</div>
 		</div><!-- end wrapper -->
 		<footer>
 			<div id="footer_container">
+				<div id="footer_nav_container">
 				<ul id="footer_nav">
 					<li>
 						<a href="index.html">Home</a>
@@ -120,6 +160,7 @@
 						<a href="reservations.html">Reservations</a>
 					</li>
 				</ul>
+				</div>
 				<p id="copyright">
 					&copy;2012 Orlando Tropical Transport
 				</p>
