--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="services.html">Services</a></li>
+			<li><a class="current_page" href="services.html">Services</a></li>
 			<li><a href="rates.html">Rates</a></li>
 			<li><a href="vehicles.html">Vehicles</a></li>
 			<li><a href="destinations.html">Destinations</a></li>
