--- a/destinations.html
+++ b/destinations.html
@@ -18,7 +18,7 @@
 			<li><a href="services.html">Services</a></li>
 			<li><a href="rates.html">Rates</a></li>
 			<li><a href="vehicles.html">Vehicles</a></li>
-			<li><a href="destinations.html">Destinations</a></li>
+			<li><a class="current_page" href="destinations.html">Destinations</a></li>
 			<li><a href="reservations.html">Reservations</a></li>
 		</ul>
 	</nav>
