--- a/rates.html
+++ b/rates.html
@@ -16,7 +16,7 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="services.html">Services</a></li>
-			<li><a href="rates.html">Rates</a></li>
+			<li><a class="current_page" href="rates.html">Rates</a></li>
 			<li><a href="vehicles.html">Vehicles</a></li>
 			<li><a href="destinations.html">Destinations</a></li>
 			<li><a href="reservations.html">Reservations</a></li>
