--- a/reservations.html
+++ b/reservations.html
@@ -19,7 +19,7 @@
 			<li><a href="rates.html">Rates</a></li>
 			<li><a href="vehicles.html">Vehicles</a></li>
 			<li><a href="destinations.html">Destinations</a></li>
-			<li><a href="reservations.html">Reservations</a></li>
+			<li><a class="current_page" href="reservations.html">Reservations</a></li>
 		</ul>
 	</nav>
 	
