--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script type="text/javascript" src="scripts/marquee.js"></script>
 	</head>
 	<body>
-		<div id="wrapper">
+		<div class="wrapper">
 			<header>
 				<nav>
 					<ul>
@@ -45,7 +45,7 @@
 				<p>Catching a plane and need to get to the airport? Picking up an important client that you need to impress? Need a ride for a night out on the town? No matter what the occasion, <span id="company_name">Orlando Tropical Transport</span> has a ride for you!</p>
 				<p>See our <a href="destinations.html">Destinations</a> page to view some of Central Florida's popular attractions!</p>
 			</div>
-			<div id="container">
+			<div class="container">
 				<div id="marquee_container autoplay">
 					<div class="marquee_container">
 						<div class="marquee_photos"></div>
@@ -83,9 +83,8 @@
 								<div class="marquee_panel_caption">
 									<h2>Cruise Ship Transportation</h2>
 									<p>
-										Going on a cruise?
-										<br />
-										Orlando Tropical Transport Cruise Service.
+										Going on a cruise? Orlando Tropical Transport Cruise Service can take you to your port of embarkation and pick you up when you return.
+										<a href="services.html">See our Services</a>
 									</p>
 								</div><!--end marquee_panel_caption -->
 							</div><!-- end marquee_panel -->
